--- a/SWAPI_Angular/src/app/people/people-list/people-list.component.html
+++ b/SWAPI_Angular/src/app/people/people-list/people-list.component.html
@@ -1,3 +1,3 @@
 <p>people-list works!</p>
 
-<app-people-card></app-people-card>
+<app-people-card *ngFor="let people of peopleList"></app-people-card>
