separando responsabilidades entre componentes

--- a/SWAPI_Angular/src/app/shared/buttons-navigation/buttons-navigation.component.html
+++ b/SWAPI_Angular/src/app/shared/buttons-navigation/buttons-navigation.component.html
@@ -1,1 +1,4 @@
-<p>buttons-navigation works!</p>
+<div class="buttons-navigation">
+  <button (click)="previousPeople()">&lt;</button>
+  <button (click)="nextPeople()">&gt;</button>
+</div>
