--- a/SWAPI_Angular/src/app/people/people.component.html
+++ b/SWAPI_Angular/src/app/people/people.component.html
@@ -1,12 +1,16 @@
-<div class="people-container" *ngIf="people && !loading; else loadingOverlay">
-  <app-people-card [people]="people"></app-people-card>
+<div class="people-container">
+  <div *ngIf="people">
+    <app-people-card *ngIf="!notFound; else notFoundTemplate" [people]="people"></app-people-card>
+  </div>
 
-  <div class="buttons-navigation">
-    <button (click)="prevPeople()" [disabled]="initialPeopleId <= 1">&lt;</button>
-    <button (click)="nextPeople()">&gt;</button>
+  <div class="buttons-navigation" *ngIf="people">
+    <button (click)="prevPeople()" [disabled]="initialPeopleId <= 1 || loading">&lt;</button>
+    <button (click)="nextPeople()" [disabled]="initialPeopleId >= 83 || loading">&gt;</button>
   </div>
 </div>
 
-<ng-template #loadingOverlay>
-  <app-loading></app-loading>
+<ng-template #notFoundTemplate>
+  <p>Not found 404</p>
 </ng-template>
+
+<app-loading *ngIf="loading"></app-loading>
