--- a/SWAPI_Angular/src/app/people/people.component.html
+++ b/SWAPI_Angular/src/app/people/people.component.html
@@ -1,9 +1,10 @@
+<app-header></app-header>
+
 <div class="people-container">
   <div *ngIf="people">
-    <app-people-card *ngIf="!notFound; else notFoundTemplate" [people]="people"></app-people-card>
-
     <div class="buttons-navigation">
       <button (click)="prevPeople()" [disabled]="initialPeopleId <= 1 || loading">&lt;</button>
+      <app-people-card *ngIf="!notFound; else notFoundTemplate" [people]="people"></app-people-card>
       <button (click)="nextPeople()" [disabled]="initialPeopleId >= 83 || loading">&gt;</button>
     </div>
   </div>
