--- a/SWAPI_Angular/src/styles.css
+++ b/SWAPI_Angular/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  overflow-x: hidden;
+  background-color: black;
+  font-family: 'Poppins', sans-serif;
+}
+
+p, h1, h2, h3 {
+  line-height: 1.5;
+}
