--- a/SWAPI_Angular/src/app/people/people.component.css
+++ b/SWAPI_Angular/src/app/people/people.component.css
@@ -10,6 +10,15 @@
   justify-content: space-between;
 }
 
+h1 {
+  color: #FFF;
+  text-align: center;
+  border: 4px solid yellow;
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin: 0 40px;
+}
+
 button {
   width: 50px;
   height: 50px;
