--- a/SWAPI_Angular/src/app/people/people.component.html
+++ b/SWAPI_Angular/src/app/people/people.component.html
@@ -11,7 +11,7 @@
 </div>
 
 <ng-template #notFoundTemplate>
-  <p>Not found 404</p>
+  <h1>People with id: {{initialPeopleId}}, not found!</h1>
 </ng-template>
 
 <app-loading *ngIf="loading"></app-loading>
